# 502_quadruped

./: README.md
legged_controllers/: CMakeLists.txt  package.xml
legged_controllers/cfg/: Tutorials.cfg
legged_controllers/scripts/: timedelay_launch.sh
legged_examples/legged_unitree/quake_description/: CMakeLists.txt  package.xml  urdf.rar
legged_examples/legged_unitree/quake_description/config/: robot_control.yaml
legged_examples/legged_unitree/quake_description/config/meshes/: arm.STL  base-link.STL  front_right_hip.STL  hip.STL  link1.STL  link2.STL  link3.STL
legged_examples/legged_unitree/quake_description/config/meshes/meshes_old/: base-link.STL  rear_right_hip.STL
legged_examples/legged_unitree/quake_description/launch/: empty_world.launch  laikago_rviz.launch
legged_examples/legged_unitree/quake_description/meshes/: link4.STL  link5.STL  rear_left_hip.STL  rear_left_lower_leg.STL
legged_examples/legged_unitree/quake_description/meshes/meshes_old/: front_left_lower_leg.STL  front_right_lower_leg.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  rear_right_lower_leg.STL
legged_examples/legged_unitree/quake_description/urdf/: arm.urdf  quake.urdf  quake_without_arm-副本.urdf  quake_without_arm.urdf  quakenew.urdf  robot.xacro
legged_examples/legged_unitree/quake_description/urdf/common/: leg.xacro
legged_examples/legged_unitree/quake_description/urdf/quake_without_arm/: const.xacro
legged_examples/legged_unitree/quake_description/xacro/: arm.xacro  const.xacro  gazebo.xacro  leg.xacro  materials.xacro  robot.xacro  transmission.xacro
(+11 files in other folders)
