<?xml version="1.0"?>
<package format="2">
    <name>quake_description</name>
    <version>0.0.0</version>
    <description>The quake_description package</description>

    <maintainer email="quake@zzd.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>
